# inspection_ws

./: .gitignore  CHANGELOG.md  README.md
src/camera_capture_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/camera_capture_pkg/action/: ExecuteTree.action  MoveToHome.action
src/camera_capture_pkg/behavior_trees/: inspection_tree.xml
src/camera_capture_pkg/camera_capture_pkg/: behavior_server.py  camera_node.py  coordinate_service_node.py  service_member_function.py
src/camera_capture_pkg/config/: bt_executor.yaml  ekf_localization.yaml  inspection_position.yaml  my_map.pgm  my_map.yaml  nav2_params.yaml
src/camera_capture_pkg/config/save.yaml/: metadata_20240730-173917.json  metadata_20240807-131722.json  metadata_20240807-131805.json
src/camera_capture_pkg/include/camera_capture_pkg/: move_to_coordinate.hpp
src/camera_capture_pkg/launch/: bt_executor.launch.xml  ekf_localization_launch.py  nav2_launch.py
src/camera_capture_pkg/msg/: NodeStatus.msg
src/camera_capture_pkg/src/: bt_executor.cpp  capture_image_node.cpp  capture_image_node.hpp  client_member_function.cpp  coordinate_service_node.cpp  get_next_coordinate_node.cpp  get_next_coordinate_node.hpp  move_to_coordinate_node.cpp  move_to_coordinate_node.hpp  move_to_home.cpp  move_to_home.hpp  service_member_function.cpp
src/camera_capture_pkg/srv/: CaptureImage.srv  GetNextCoordinate.srv  MoveToCoordinate.srv
